<resources>
	<string name="bookshelf_name">书架</string>
	<string name="bookshelf_empty_comic">您还没有收藏至少一本漫画</string>
	<string name="bookshelf_empty_novel">您还没有收藏至少一本轻小说</string>
	<string name="bookshelf_comic_count">漫画数量（%d）</string>
	<string name="bookshelf_identity_expired">身份过期啦，请重新登录~</string>
	<string name="bookshelf_novel_count">轻小说数量（%d）</string>
	<string name="bookshelf_comic">漫画</string>
	<string name="bookshelf_novel">小说</string>
	<string name="bookshelf_filter">筛选</string>
	<string name="bookshelf_edit">编辑</string>
	<string name="bookshelf_up">向上</string>
	<string name="bookshelf_down">向下</string>
	<string name="bookshelf_sort_add_time"><b>按照加入书架时间排序</b></string>
	<string name="bookshelf_sort_update_time"><b>按照更新时间排序</b></string>
	<string name="bookshelf_sort_readed_time"><b>按照阅读时间排序</b></string>
</resources>